--- a/app/src/main/res/layout-land/fragment_login_page.xml
+++ b/app/src/main/res/layout-land/fragment_login_page.xml
@@ -5,15 +5,25 @@
     android:id="@+id/login_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/flechaverde"
+    android:background="@color/white"
     tools:context=".presentation.ui.fragments.LoginPage">
 
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/flechaverde"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.532"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="0dp" />
 
     <TextView
         android:id="@+id/textlogeayempieza"
         android:layout_width="315dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="360dp"
         android:fontFamily="@font/jua_normal"
         android:text="@string/logea_y_empieza_a_transferir"
@@ -35,16 +45,17 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.256"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toBottomOf="@+id/textlogeayempieza"
         app:layout_constraintVertical_bias="1.0" />
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_width="316dp"
-        android:layout_height="90dp"
+        android:layout_height="61dp"
         android:background="@color/white"
         android:hint="@string/ingresa_tu_email"
         android:textColorHint="@color/grisAlke"
@@ -53,42 +64,27 @@
         app:endIconMode="clear_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="0.663"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.374">
+        app:layout_constraintVertical_bias="0.371">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0.50"
             android:fontFamily="@font/jua_normal"
             android:inputType="textEmailAddress"
             android:maxLength="42" />
+
     </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/jua_normal"
-        android:text="@string/contrase_a"
-        android:textColor="@color/grisAlkeosc"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline9"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-        app:layout_constraintVertical_bias="0.75" />
-
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout2"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_width="316dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="356dp"
+        android:layout_height="61dp"
+        android:layout_marginBottom="116dp"
         android:background="@color/white"
         android:hint="@string/ingresa_tu_contrase_a"
         android:textColorHint="@color/grisAlke"
@@ -98,14 +94,13 @@
         app:endIconTint="@color/grisAlke"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.568"
+        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-        app:layout_constraintVertical_bias="0.6">
+
+        >
 
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0.50"
@@ -116,20 +111,17 @@
 
     <TextView
         android:id="@+id/olvidastetucontra"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="324dp"
-        android:fontFamily="sans-serif-black"
-        android:lineHeight="17.5dp"
+        android:layout_width="156dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="68dp"
+        android:fontFamily="@font/jua_normal"
         android:text="@string/olvidaste_tu_contrase_a"
         android:textColor="@color/azulalkeosc"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline9"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
-        app:layout_constraintVertical_bias="0.306" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/botonlogin"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline8"
@@ -157,33 +149,45 @@
         android:id="@+id/botonlogin"
         android:layout_width="316dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="88dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/boton_redondeado"
         android:fontFamily="@font/jua_normal"
         android:text="@string/login"
         android:textAllCaps="false"
         android:textColor="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.568"
+        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/olvidastetucontra"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
     <TextView
         android:id="@+id/textcrearnuevacuenta"
-        android:layout_width="wrap_content"
-        android:layout_height="21dp"
-        android:layout_marginTop="15dp"
+        android:layout_width="89dp"
+        android:layout_height="50dp"
         android:fontFamily="@font/jua_normal"
         android:text="@string/crear_cuenta_nueva"
         android:textColor="@color/azulalkeosc"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
-        app:layout_constraintTop_toBottomOf="@+id/botonlogin"
-        app:layout_constraintVertical_bias="0.328" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+        app:layout_constraintVertical_bias="0.47" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/jua_normal"
+        android:text="@string/contrase_a"
+        android:textColor="@color/grisAlkeosc"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.35"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
