--- a/app/src/main/res/layout/fragment_home_page_empty.xml
+++ b/app/src/main/res/layout/fragment_home_page_empty.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragmentos.HomePageEmpty">
+    tools:context=".presentation.ui.fragments.HomePageEmpty">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline7"
