--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragmentos.ProfilePage">
+    tools:context=".presentation.ui.fragments.ProfilePage">
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
