--- a/app/src/main/res/layout/fragment_request_money.xml
+++ b/app/src/main/res/layout/fragment_request_money.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragmentos.RequestMoney">
+    tools:context=".presentation.ui.fragments.RequestMoney">
 
     <include
         android:id="@+id/include2"
