Cuarta versión del AlkeWallet modulo 5: mejora del xml Home Page.

--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -60,16 +60,14 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
+        android:layout_width="221dp"
+        android:layout_height="41dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="124dp"
-        android:layout_marginBottom="118dp"
         android:fontFamily="@font/jua_normal"
         android:text="Hola, Amanda!"
         android:textColor="#80FFFFFF"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent"
         app:lineHeight="24dp" />
@@ -206,15 +204,13 @@
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="47dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="7dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="14dp"
             android:fontFamily="@font/jua_normal"
+            android:layout_centerVertical="true"
+            android:gravity="center"
             android:text="@string/ingresar_dinero"
             android:textAllCaps="false"
             android:textColor="@color/white">
@@ -226,14 +222,13 @@
             android:id="@+id/logorequest"
             android:layout_width="21dp"
             android:layout_height="17dp"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="17dp"
-            android:layout_marginEnd="118dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="1dp"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="14dp"
+            android:layout_toStartOf="@+id/textView14"
             android:src="@drawable/request_icon" />
 
     </RelativeLayout>
