--- a/app/src/main/res/layout/fragment_signup_page.xml
+++ b/app/src/main/res/layout/fragment_signup_page.xml
@@ -24,16 +24,12 @@
         android:translationY="-6sp" />
 
     <TextView
-        android:layout_width="58dp"
+        android:layout_width="73dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="42dp"
         android:layout_marginTop="206dp"
-        android:layout_marginEnd="313dp"
-        android:layout_marginBottom="667dp"
         android:fontFamily="@font/jua_normal"
         android:text="@string/nombre"
         android:textColor="@color/grisAlkeosc"
@@ -43,16 +39,14 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutname"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-        android:layout_width="316dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="69dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="42dp"
         android:layout_marginTop="228dp"
         android:layout_marginEnd="53dp"
-        android:layout_marginBottom="599dp"
         android:background="@color/white"
         android:hint="@string/ingresa_tu_nombre"
         android:textColorHint="@color/grisAlke"
@@ -60,8 +54,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextname"
-            android:layout_width="316dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="53dp"
             android:alpha="0.50"
             android:fontFamily="@font/jua_normal"
             android:inputType="textEmailAddress"
@@ -71,16 +65,12 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="61dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="42dp"
         android:layout_marginTop="299dp"
-        android:layout_marginEnd="308dp"
-        android:layout_marginBottom="574dp"
         android:fontFamily="@font/jua_normal"
         android:text="@string/apellido"
         android:textColor="@color/grisAlkeosc"
@@ -88,16 +78,12 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="42dp"
         android:layout_marginTop="386dp"
-        android:layout_marginEnd="335dp"
-        android:layout_marginBottom="487dp"
         android:fontFamily="@font/jua_normal"
         android:text="@string/email"
         android:textColor="@color/grisAlkeosc"
@@ -106,16 +92,14 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutmail"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-        android:layout_width="323dp"
-        android:layout_height="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="63dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="42dp"
         android:layout_marginTop="413dp"
         android:layout_marginEnd="53dp"
-        android:layout_marginBottom="414dp"
         android:background="@color/white"
         android:hint="@string/ingresa_tu_email"
         android:textColorHint="@color/grisAlke"
@@ -124,7 +108,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextmail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:alpha="0.50"
             android:fontFamily="@font/jua_normal"
             android:inputType="textEmailAddress"
@@ -136,15 +120,13 @@
         android:id="@+id/textInputLayoutApellido"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="63dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="42dp"
         android:layout_marginTop="322dp"
         android:layout_marginEnd="53dp"
-        android:layout_marginBottom="514dp"
         android:background="@color/white"
         android:hint="@string/ingresa_tu_apellido"
         android:textColorHint="@color/grisAlke"
@@ -153,13 +135,13 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextApellido"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:alpha="0.50"
             android:fontFamily="@font/jua_normal"
             android:inputType="textEmailAddress"
             android:maxLength="42"
 
-             />
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -168,12 +150,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="42dp"
         android:layout_marginTop="486dp"
-        android:layout_marginEnd="280dp"
-        android:layout_marginBottom="386dp"
         android:fontFamily="@font/jua_normal"
         android:text="@string/contrase_a"
         android:textColor="@color/grisAlkeosc"
@@ -183,15 +161,13 @@
         android:id="@+id/textInputLayoutContra"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_width="wrap_content"
-        android:layout_height="61dp"
+        android:layout_height="63dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="42dp"
         android:layout_marginTop="508dp"
         android:layout_marginEnd="53dp"
-        android:layout_marginBottom="322dp"
         android:background="@color/white"
         android:hint="@string/ingresa_tu_contrase_a"
         android:textColorHint="@color/grisAlke"
@@ -202,7 +178,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextContra"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:alpha="0.50"
             android:fontFamily="@font/jua_normal"
             android:inputType="textPassword"
@@ -215,12 +191,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="575dp"
-        android:layout_marginEnd="201dp"
-        android:layout_marginBottom="297dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="582dp"
         android:fontFamily="@font/jua_normal"
         android:text="@string/reingresar_contrase_a"
         android:textColor="@color/grisAlkeosc"
@@ -234,11 +206,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="42dp"
         android:layout_marginTop="605dp"
         android:layout_marginEnd="53dp"
-        android:layout_marginBottom="221dp"
         android:background="@color/white"
         android:hint="@string/reingresar_contrase_a"
         android:textColorHint="@color/grisAlke"
@@ -248,7 +218,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextRePassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:alpha="0.50"
             android:fontFamily="@font/jua_normal"
             android:inputType="textPassword"
@@ -263,9 +233,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="755dp"
-        android:layout_marginEnd="51dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="742dp"
+        android:layout_marginEnd="54dp"
         android:background="@drawable/boton_redondeadoosc"
         android:fontFamily="@font/jua_normal"
         android:text="@string/crear_cuenta"
@@ -274,15 +245,17 @@
 
     <TextView
         android:id="@+id/textyatienesuna"
-        android:layout_width="151dp"
-        android:layout_height="21dp"
+        android:layout_width="234dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/botoncrearcuenta2"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="135dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="82dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="95dp"
         android:fontFamily="@font/jua_normal"
+        android:gravity="center"
         android:text="@string/ya_tienes_una_cuenta"
         android:textColor="@color/azulalkeosc" />
 
