--- a/app/src/main/res/layout/fragment_request_money.xml
+++ b/app/src/main/res/layout/fragment_request_money.xml
@@ -119,6 +119,7 @@
             android:layout_height="56dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="8dp"
+            android:hint="Ingresar Monto"
             android:background="@drawable/rectangle2"
             android:textColorHint="@color/azulalkeosc">
 
